[package]
name = "iced_memory_editor"
version = "0.1.0"
authors = ["LLeny"]
edition = "2021"
description = "A memory editor for the iced library"
readme = "README.md"
homepage = "https://github.com/LLeny/iced_memory_editor"
repository = "https://github.com/LLeny/iced_memory_editor"
license = "GPLv3"
keywords = ["iced", "memory", "editor", "rust"]
categories = ["gui"]

[features]
default = []
iced = ["dep:iced_core", "dep:iced_renderer"]
libcosmic = ["dep:libcosmic"]

[dependencies]
bytemuck = "1.22.0"

[dependencies.iced_core]
git = "https://github.com/iced-rs/iced.git"
rev = "363b0e9"
features = ["advanced"]
optional = true

[dependencies.iced_renderer]
git = "https://github.com/iced-rs/iced.git"
rev = "363b0e9"
optional = true

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "cb682be3c887bcbf591309d350bac4d4710e104b"
default-features = false
optional = true

[dev-dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "363b0e9", features = [
	"advanced",
] }
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "cb682be3c887bcbf591309d350bac4d4710e104b", default-features = false, features = [
    "debug",
    "winit",
    "tokio",
    "xdg-portal",
    "dbus-config",
    "a11y",
    "wgpu",
    "single-instance",
    "multi-window",
]}
rand = "0.9"

[lib]
name = "iced_memory_editor"
path = "src/lib.rs"

[[example]]
name = "memory_editor_iced"
path = "examples/memory_editor_iced.rs"
required-features = ["iced"]

[[example]]
name = "memory_editor_cosmic"
path = "examples/memory_editor_cosmic.rs"
required-features = ["libcosmic"]