[package]
edition = "2021"
name = "iced_memory_editor"
version = "0.1.0"
authors = ["LLeny"]
description = "A memory editor for the iced library"
readme = "README.md"
homepage = "https://github.com/LLeny/iced_memory_editor"
repository = "https://github.com/LLeny/iced_memory_editor"
license = "GPLv3"
keywords = ["iced", "memory", "editor", "rust"]
categories = ["gui"]

[features]
default = []
iced = ["dep:iced_core", "dep:iced_renderer"]
libcosmic = ["dep:libcosmic"]

[dependencies]
bytemuck = "1.22.0"

[dependencies.iced_core]
git = "https://github.com/iced-rs/iced.git"
rev = "d203392c9d4f565e4f3ae91899cd390c4d947ead"
features = ["advanced"]
optional = true

[dependencies.iced_renderer]
git = "https://github.com/iced-rs/iced.git"
rev = "d203392c9d4f565e4f3ae91899cd390c4d947ead"
optional = true

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "148656948179bb53362e77e6e8057255f2f9d8c9"
default-features = false
optional = true

[dev-dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "d203392c9d4f565e4f3ae91899cd390c4d947ead", features = [
	"advanced",
] }
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "148656948179bb53362e77e6e8057255f2f9d8c9", default-features = false, features = [
	"debug",
	"winit",
	"tokio",
	"xdg-portal",
	"dbus-config",
	"a11y",
	"wgpu",
	"single-instance",
	"multi-window",
] }
rand = "0.9"

[patch.'https://github.com/pop-os/cosmic-text']
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git?rev=6598c7cae80c112b9889a2375d62b2c999ec7fc0" }

[lib]
name = "iced_memory_editor"
path = "src/lib.rs"

[[example]]
name = "memory_editor_iced"
path = "examples/memory_editor_iced.rs"
required-features = ["iced"]

[[example]]
name = "memory_editor_cosmic"
path = "examples/memory_editor_cosmic.rs"
required-features = ["libcosmic"]
